--- a/package.json
+++ b/package.json
@@ -18,20 +18,22 @@
     "eslint-plugin-react": "^7.14.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "knex": "latest",
     "lodash": "^4.17.5",
+    "sqlite3": "latest",
     "strapi": "3.0.0-beta.16.6",
     "strapi-admin": "3.0.0-beta.16.6",
-    "strapi-utils": "3.0.0-beta.16.6",
-    "strapi-plugin-settings-manager": "3.0.0-beta.16.6",
-    "strapi-plugin-content-type-builder": "3.0.0-beta.16.6",
-    "strapi-plugin-content-manager": "3.0.0-beta.16.6",
-    "strapi-plugin-users-permissions": "3.0.0-beta.16.6",
-    "strapi-plugin-email": "3.0.0-beta.16.6",
-    "strapi-plugin-upload": "3.0.0-beta.16.6",
     "strapi-hook-bookshelf": "3.0.0-beta.16.6",
     "strapi-hook-knex": "3.0.0-beta.16.6",
-    "knex": "latest",
-    "sqlite3": "latest"
+    "strapi-plugin-content-manager": "3.0.0-beta.16.6",
+    "strapi-plugin-content-type-builder": "3.0.0-beta.16.6",
+    "strapi-plugin-email": "3.0.0-beta.16.6",
+    "strapi-plugin-settings-manager": "3.0.0-beta.16.6",
+    "strapi-plugin-upload": "3.0.0-beta.16.6",
+    "strapi-plugin-users-permissions": "3.0.0-beta.16.6",
+    "strapi-utils": "3.0.0-beta.16.6"
   },
   "author": {
     "name": "A Strapi developer"
